--- a/download/index.html
+++ b/download/index.html
@@ -79,7 +79,7 @@ Package Index:<br/>
 		<p>Below are links to the source packages for the latest release of Cheshire3, and the install script.</p>
 		<table>
 		  <tr>
-		    <td><a href="latest/build.sh">build.sh</a></td>
+		    <td><a href="http://download.cheshire3.org/latest/build.sh">build.sh</a></td>
 		    <td/>
 		    <td>Install script</td>
 		  </tr>
@@ -183,12 +183,12 @@ Package Index:<br/>
 	<div class="fieldset">
 		<span class="legend">Older Versions</span>
 		<ul>
-		  <li><a href="0.9.10/">0.9.10</a></li>
-		  <li><a href="0.9.9/">0.9.9</a></li>
-		  <li><a href="0.9.4/">0.9.4</a></li>
-		  <li><a href="0.9.3/">0.9.3</a></li>
-		  <li><a href="0.9.2/">0.9.2</a></li>
-		  <li><a href="0.9.1/">0.9.1</a></li>
+		  <li><a href="http://download.cheshire3.org/0.9.10/">0.9.10</a></li>
+		  <li><a href="http://download.cheshire3.org/0.9.9/">0.9.9</a></li>
+		  <li><a href="http://download.cheshire3.org/0.9.4/">0.9.4</a></li>
+		  <li><a href="http://download.cheshire3.org/0.9.3/">0.9.3</a></li>
+		  <li><a href="http://download.cheshire3.org/0.9.2/">0.9.2</a></li>
+		  <li><a href="http://download.cheshire3.org/0.9.1/">0.9.1</a></li>
 		</ul>
 		<a href="#top" title="Back to top of page">[top]</a>
 	</div>
