replaced download details with link to download section

--- a/index.html
+++ b/index.html
@@ -108,13 +108,11 @@
         <div class="fieldset" id="download">
             <span class="legend">Download Cheshire3</span>
             <p>
-                You can get the current Cheshire3 code from <a href="download/cvs.html">SVN</a>, or from our <a href="download/">downloads section</a> along with all the required software packages.
-                As of version 0.9, we have an automated build and install script that will set practically everything up for you, and the install set is split into various sub-packages.
+            See our
+            <a href="/download/">
+                Downloads
+            </a> section
             </p>
-<!--            <p>-->
-<!--                Please note that at this time Cheshire3 is still under development and may not be suitable for a production system.-->
-<!--                That said, it is currently in use in production systems, including library catalogues, SRU servers, and web storefront systems (<a href="#uses">see Uses</a>). -->
-<!--            </p>-->
         </div>
 
         <a name="docs"></a>
