replaced links to the Forum with links to GitHub wiki

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <li class="subtab"><a href="/docs/objects/api/" title="Application Programming Interface">API</a></li>
                 </ul>
             </li>
-            <li class="navtab"><a href="/forum/" title="Discussion Forum">Forum</a></li>
+            <li class="navtab"><a href="http://github.com/cheshire3/cheshire3/wiki/" title="Wiki">Wiki</a></li>
         </ul>
     </div>
 
@@ -118,15 +118,18 @@
         <a name="docs"></a>
         <div class="fieldset" id="docs">
             <span class="legend">Documentation</span>
-            <p>We have <a href="docs/">Documentation</a>!  Although not yet 100% complete, it is getting there and should be sufficient to get started.</p>
-            <p>We also have a <a href="/forum">forum</a> where you can discuss the software, and hopefully get some help and advice.
+            <p>We have <a href="docs/">Documentation</a>!  As with most software documentation, this is a work in progress, but there is plenty to get you started.</p>
+            <p>We also have a <a href="http://github.com/cheshire3/cheshire3/wiki">wiki</a> where you can read and contribute about specific installation and configuration issues.
         </div>
 
         <a name="support"></a>
         <div class="fieldset" id="support">
             <span class="legend">Support</span>
-            <p><strong><a href="/forum">Forum</a></strong>: check to see if anyone else has encountered (and hopefully solved) any issues you're having.</p>
-            <!--p><strong><a href="">IRC</a></strong>: Hang out on the #cheshire3 channel on irc.freenode.net where you should find members of the Cheshire3 development team, and hopefully others developing with Cheshire3.</p-->
+            <p><strong><a href="http://github.com/cheshire3">GitHub</a></strong></p>
+                <ul>
+                 <li><a href="http://github.com/cheshire3/cheshire3/issues">Issue Tracker</a> - Report bugs and request new features</li>
+                 <li><a href="http://github.com/cheshire3/cheshire3/wiki">Wiki</a> - Read and contribute docs on specific installation and setup issues</li>
+                </ul>
             <p><strong>Email</strong></p>
 			<ul>
 				<li><a href="mailto:info@cheshire3.org?Subject=Info%20 request">info@cheshire3.org</a>: if you're considering using or developing with Cheshire3.</li>
